--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-
+    <section class="header">
+        <h1>lets help those who really need help</h1>
+    </section>
 </body>
 
 </html>
