--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 <body>
     <section class="header">
-        <h1>lets help those who really need help</h1>
+        <div class="heading">
+            <h1>lets help those who really need help</h1>
+            <p>Sylhet city, situated on the bank of Surma river, has been facing severe instances of waterlogging and
+                flash floods for a long time, although such incidents in the hilly region were alien even some two
+                decades ago.</p>
+            <a class="donate-now" target="_blank" href="https://twitter.com/podder_protik">DONATE NOW</a>
+        </div>
     </section>
 </body>
 
