--- a/index.html
+++ b/index.html
@@ -22,6 +22,29 @@
             <a class="donate-now" target="_blank" href="https://twitter.com/podder_protik">DONATE NOW</a>
         </div>
     </section>
+    <section class="donate-today">
+        <h1>Please donate them</h1>
+        <p>Now a days they are totally Helpless. They need help. If you are able to help them please donate us.We will
+            deliver the money you gave them.They are having a really bad time</p>
+        <div class="flex">
+            <div id="box">
+                <h1>100Tk</h1>
+            </div>
+            <div id="box" class="color">
+                <h1>200Tk</h1>
+            </div>
+            <div id="box">
+                <h1>500Tk</h1>
+            </div>
+            <div id="box">
+                <h1>1000Tk</h1>
+            </div>
+            <div id="box">
+                <h1>5000Tk</h1>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
