--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p>Sylhet city, situated on the bank of Surma river, has been facing severe instances of waterlogging and
                 flash floods for a long time, although such incidents in the hilly region were alien even some two
                 decades ago.</p>
+            <br><br>
             <a class="donate-now" target="_blank" href="https://twitter.com/podder_protik">DONATE NOW</a>
         </div>
     </section>
@@ -43,8 +44,41 @@
                 <h1>5000Tk</h1>
             </div>
         </div>
-
+        <small>other ammount (taka)</small>
+        <hr>
+        <br>
+        <a class="donate" target="_blank" href="https://twitter.com/podder_protik">DONATE NOW</a>
+    </section>
+    <section class="donation-plan">
+        <h1>Our donation plan</h1>
+        <p class="peragraph">Our Sylhet Aid team will handout relief packages to affect homes which includes food packs
+            and boats for
+            essential travelling. We plan to help the most vulnerable people to access nutritious food and essential
+            items as soon as possible.</p>
+        <div class="display-flex">
+            <div id="display">
+                <img src="./image/food.png" alt="">
+                <h2>Food for a family</h2>
+                <p>Like much of the emergency food aid provided to the millions of people on the brink of
+                    starvationindrought.</p>
+            </div>
+            <div id="display" class="first-box">
+                <img src="./image/shelter.png" alt="">
+                <h2>shelter for a family</h2>
+                <p>You have a right to shelter if you have no other safe.</p>
+            </div>
+            <div id="display" class="second-box">
+                <img src="./image/Frame-1.png" alt="">
+                <h2>education for a child</h2>
+                <p>Without quality education, children face considerable barriers to employment and earning
+                    potentiallater in life.</p>
+            </div>
+        </div>
     </section>
 </body>
+<footer>
+    <h3>thank's for visiting my portfolio</h3>
+    <small>see you again. @Protik Podder</small>
+</footer>
 
 </html>
