--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
             </div>
         </div>
     </section>
+    <section class="get-updates">
+        <h1>Get my updates</h1>
+        <p>if you want to get my updates please subscribe my chennel. plese give your email address and press the
+            subscribe button
+        </p>
+        <div class="email-box">
+            <input type="email" name="enter your emai" id="email" value="email">
+            <input class="bg-color" type="submit" value="subscribe">
+        </div>
+    </section>
 </body>
 <footer>
     <h3>thank's for visiting my portfolio</h3>
