--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
             </div>
         </div>
     </section>
+    <section class="donate-us">
+        <div class="helpless">
+            <div>
+                <h3>they are really Helpless</h3>
+            </div>
+            <div>
+                <p>Provide support to underprivileged section of the society specially extreme poor/ homeless and orphan
+                    children through quality education ,nourishment & shelter to make them resources for the nation.</p>
+            </div>
+        </div>
+        <div>
+            <img src="./image/donation11.jpg" alt="">
+        </div>
+    </section>
     <section class="get-updates">
         <h1>Get my updates</h1>
         <p>if you want to get my updates please subscribe my chennel. plese give your email address and press the
